Table.js pagination stops negative numbers go to page input, adjusts margins & gap same section under 1279px screen width

--- a/frontend/src/pages/Home/Table.module.css
+++ b/frontend/src/pages/Home/Table.module.css
@@ -409,6 +409,13 @@ select {
         grid-row: 2;
         grid-column: 5 / span 2;
         justify-self: center;
+        margin-bottom: 0.5rem;
+        /*margin-right: 0.5rem;*/
+        gap: 0.5rem;
+    }
+
+    .pageInput {
+        margin-bottom: 1rem;
     }
 }
 
